--- a/PurplerArtsWeb/Views/Home/Index.cshtml
+++ b/PurplerArtsWeb/Views/Home/Index.cshtml
@@ -1,9 +1,14 @@
-﻿
+﻿@model WazeCreditGreen.Models.ViewModels.HomeVM
+
+@using Microsoft.Extensions.Options
+@inject IOptions<WazeCreditGreen.Utility.AppSettingClasses.WazeForecastingSettings> wazeForecastSettings
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Purpler Arts</h1>
+    <h1 class="display-4">Welcome</h1>
+    @*<p>@Model.MarketForecast</p>*@
+    <p>Current Market Prediction Status : @(wazeForecastSettings.Value.ForecastTrackerEnabled?"Online":"Offline")</p>
 </div>
