--- a/PurplerArtsWeb/Views/_ViewImports.cshtml
+++ b/PurplerArtsWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PurplerArtsWeb
-@using PurplerArtsWeb.Models
+﻿@using WazeCreditGreen
+@using WazeCreditGreen.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
